# Succeess-_web_Development_django

./: db.sqlite3  manage.py  pyproject.toml
SWD/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: admin.py  forms.py  models.py  urls.py  views.py
homepage/migrations/: 0001_initial.py
templates/: generic_form.html  index.html
