[tool.poetry]
name = "django-success"
version = "1.0.0"
description = "Success web development new site"
authors = ["Anthony Alvarez"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
